# opengl-linux-example

./: README.md  glad.c  main.cpp  meson.build  run.sh  shader.cpp  shader.h
gladdir/glad/: glad.h
